// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client-js"
  output   = "../lib/generated/prisma"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model Project {
  id          Int      @id @default(autoincrement())
  title       String
  description String?
  type        String?
  technologies ProjectTechnology[]
}

model Technology {
  id          Int      @id @default(autoincrement())
  name        String   @unique
  icon        String?
  level       Int?
  levelText   String?
  projects    ProjectTechnology[]
}

model ProjectTechnology {
  project      Project    @relation(fields: [projectId], references: [id])
  projectId    Int
  technology   Technology @relation(fields: [technologyId], references: [id])
  technologyId Int

  @@id([projectId, technologyId])
}

model Skill {
  id   Int    @id @default(autoincrement())
  name String @unique
}

model Message {
  id        Int      @id @default(autoincrement())
  name      String
  lastname  String
  email     String
  subject   String
  message   String
  createdAt DateTime @default(now())
}
